--- a/05-input/index05-01.html
+++ b/05-input/index05-01.html
@@ -88,7 +88,7 @@
             gl_FragColor = texture2D(uSampler, vTexCoord) * vec4( lightWeighting.rgb, 1.0 );
         }          
     </script>
-    <link rel="stylesheet" type="text/css" href="styles2.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body onload="main()">
 <canvas id='c'> 
