Added table of contents to readme, briefly describing each demo

--- a/04-lighting/index04-03.html
+++ b/04-lighting/index04-03.html
@@ -102,7 +102,7 @@
             }
         }          
     </script>
-    <link rel="stylesheet" type="text/css" href="styles2.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body onload="main()">
 <canvas id='c'> 
