--- a/04-lighting/index04-02.html
+++ b/04-lighting/index04-02.html
@@ -96,7 +96,7 @@
             }
         }          
     </script>
-    <link rel="stylesheet" type="text/css" href="styles2.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body onload="main()">
 <canvas id='c'> 
