Improved comments to clarify things.

--- a/05-input/index05-01.html
+++ b/05-input/index05-01.html
@@ -94,5 +94,9 @@
 <canvas id='c'> 
     If you're seeing this, your browser does not support the canvas tag
 </canvas>
+<p>
+Use arrow keys to rotate the cube:<br>
+&nbsp;&nbsp;- up/down change rotation about x-axis<br>
+&nbsp;&nbsp;- left/right change rotation about y-axis
 </body>
 </html>
